going down to jdk 18