@@ -32,7 +32,7 @@ public class VirtualRegisterDataflowService<T extends WordNumber> implements Dat
     int pointerAddress = -1;
     if (register instanceof VirtualComposed16BitRegister<T>) {
       VirtualComposed16BitRegister<T> virtualComposed16BitRegister = (VirtualComposed16BitRegister<T>) register;
-      VirtualComposed16BitRegister<T> first = (VirtualComposed16BitRegister<T>) virtualComposed16BitRegister.getPreviousVersions().getFirst();
+      VirtualComposed16BitRegister<T> first = (VirtualComposed16BitRegister<T>) virtualComposed16BitRegister.getPreviousVersions().get(0);
       Virtual8BitsRegister<T> low = (Virtual8BitsRegister<T>) first.getLow();
       Ld<T> instruction = (Ld<T>) low.instruction;
       if (instruction.getSource() instanceof IndirectMemory16BitReference<T> indirectMemory16BitReference) {
